<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#8B0000" />

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#230F10"
        android:weightSum="4">

        <!-- Inicio -->
        <LinearLayout
            android:id="@+id/navInicio"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iconInicio"
                android:src="@drawable/ic_home"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:id="@+id/NavInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio"
                android:textColor="#C7C4C4"
                android:textSize="12sp" />
        </LinearLayout>


        <!-- Mis Turnos -->
        <LinearLayout
            android:id="@+id/navTurnos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iconTurnos"
                android:src="@drawable/ic_calendar"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:id="@+id/NavMisTurnos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mis_turnos"
                android:textColor="#C7C4C4"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- Servicios -->
        <LinearLayout
            android:id="@+id/navServicios"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iconServicios"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_scissors"
                app:tint="#C7C4C4" />

            <TextView
                android:id="@+id/NavServicios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servicios"
                android:textColor="#C7C4C4"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Perfil -->
        <LinearLayout
            android:id="@+id/navPerfil"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iconPerfil"
                android:src="@drawable/ic_account"
                app:tint="#C7C4C4"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:id="@+id/NavPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfil"
                android:textColor="#C7C4C4"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>